# ganimede

./: .gitignore  LICENSE  README.md  ganimede.env  pyproject.toml  run.py
data/: 2020.csv
data/html/: 2020.html
docker/: Dockerfile  docker-compose.yml  gunicorn_conf.py
scripts/: launch.sh
src/: config.py  main.py
src/api/: jupyter.py  revolve.py
src/core/: jupyter.py
src/model/: jupyer_request.py  message.py  space.py
src/space/: docker_file.py  space.py  space_manager.py
src/storage/: cache.py  cache_store.py
src/utils/: crypto_utils.py  docker_cli.py  path_utils.py  py_utils.py  system.py
