[tool.poetry]
name = "ganimede"
version = "0.1.0"
description = "Deploy Jupyter notebooks for the world"
authors = ["Manu G Raj"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.1"
loguru = "^0.5.3"
uvicorn = {extras = ["standard"], version ="^0.14.0" }
redis = "^3.5.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
flake8 = "^3.9.2"
python-multipart = "^0.0.5"
jupyter = "^1.0.0"
papermill = "^2.3.3"
notebooktoall = "^0.2.3"
black = "^21.5b2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autoflake = "^1.4"
pytest = "^6.2.4"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
